--- a/templates/recommended_movies.html
+++ b/templates/recommended_movies.html
@@ -68,7 +68,7 @@
             {% endif %}
         </div>
 
-        <a href="/" class="btn btn-primary mt-4">Powrót</a>
+        <a href="/index" class="btn btn-primary mt-4">Powrót</a>
     </div>
 
     <script>
