--- a/templates/similar_users.html
+++ b/templates/similar_users.html
@@ -64,7 +64,7 @@
             <p>Brak rekomendacji od podobnych użytkowników.</p>
         {% endif %}
 
-        <a href="/" class="btn btn-primary">Powrót</a>
+        <a href="/index" class="btn btn-primary">Powrót</a>
     </div>
 </body>
 </html>
