--- a/templates/dual_recommendations.html
+++ b/templates/dual_recommendations.html
@@ -97,7 +97,7 @@
             {% endif %}
         </div>
 
-        <a href="/" class="btn btn-primary mt-4">Powrót</a>
+        <a href="/index" class="btn btn-primary mt-4">Powrót</a>
     </div>
 
     <script>
